# UELAT

./: .gitignore  LICENSE  Makefile  Makefile.coq  Makefile.coq.conf  Project.toml  README.md  gitignore  pyproject.toml  uelat.opam
.github/scripts/: build_coq.sh  check_coq_no_admitted.sh  no_admitted_axioms.sh
.github/workflows/: ci.yml
Coq/: .Makefile.coq.d  .Makefile.d  .lia.cache  .nra.cache  Certificate.v  ErrorBound.v  Example.v  Makefile.conf  Makefile.coq.conf  PartitionOfUnity.v  Reconstruct.v  SobolevApprox.v  UELAT.v  _CoqProject
Coq/Adjunction/: .Adjunction.aux  .Functors.aux  .Model.aux  .Probe.aux  .Reflection.aux  Adjunction.glob  Adjunction.v  Adjunction.vo  Functors.glob  Functors.v  Functors.vo  Model.glob  Model.v  Model.vo  Probe.glob  Probe.v  Probe.vo  Reflection.v
Coq/Approx/: Bernstein.v  Bernstein_Lipschitz.v  Certificate.v  EffectiveDescent.v  Incompressibility.v  Spec.v  UELAT_External.v  UELAT_Internal.v  Weierstrass_Lipschitz.v
Coq/Examples/: .FourierCert.aux  ChebyshevCert.v  ChebyshevProof.v  ExpCert.v  FourierCert.v  SobolevCert.v
Coq/Foundations/: .CCP.aux  .Certificate.aux  .ProbeTheory.aux  CCP.glob  CCP.v  CCP.vo  Certificate.glob  Certificate.v  Certificate.vo  ProbeTheory.glob  ProbeTheory.v  ProbeTheory.vo
Coq/Stability/: CertificateComposition.v  Modulus.v  UniformStability.v
Coq/Util/: .Entropy.aux  .Reals_ext.aux  .Summation.aux  Entropy.glob  Entropy.v  (+8 more)
docs/: AXIOMS_AND_ADMISSIONS.md  CI.md
scripts/: no_admit.sh
src/: UELAT.jl
test/: runtests.jl
tests/: test_sanity.py
tools/: gen_coqproject.sh
